--- a/resources/common/th/th.css
+++ b/resources/common/th/th.css
@@ -79,7 +79,8 @@
     color:#444;
     background: white;
     padding-left: 4px;
-    padding-right: 4px
+    padding-right: 4px;
+    cursor:pointer;
 }
 
 .slotbar_toolbar .th_querybox_item{
