--- a/gnrjs/gnr_d11/css/gnrbase.css
+++ b/gnrjs/gnr_d11/css/gnrbase.css
@@ -5554,6 +5554,7 @@ div[disabled='true'], div[disabled='disabled']{
     padding-top: 1px;
     text-align: center;
     overflow: hidden;
+    height:100%;
 }
 
 .gr_table{
