--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -1,4 +1,7 @@
 /*vico*/
+body {
+    font-family:"SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
 .frameindexroot{
     background:#eeeeee;
 }
@@ -113,10 +116,10 @@
 }
 
 .pbl_root_top {
-    height: 22px;
+    height: 24px;
     vertical-align: middle;
-    color: white;
-    background-color: #711B2A;
+    color:rgba(30, 48, 85, 1);
+    background-color:rgba(234, 203, 110, 1) !important;
 }
 
 
@@ -733,7 +736,7 @@
 /* @end */
 
 #mainWindow {
-    /*background-color: rgba(170, 190, 201, 0.2);*/
+    background-image: linear-gradient(to right top, #efefef, #ffffff, #ffffff, #efefef, #ffffff);
     font-size: 12px;
 }
 
@@ -1001,10 +1004,15 @@
 ._common_d11.tundra .dijitPopup > div, .tundra .dijitPopup > table{
     opacity: 1;
 }
+.frameindex_left{
+    background: #ECE9E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */         
+}
 
 .framedindex_tablist{
     background-image: none;
-    background-color: #555;
+    background-image: linear-gradient(to right top, #172b51, #1b3058, #20345e, #243965, #293e6c);
     padding:2px;
 }
 .mimi .framedindex_tablist .button_block.iframetab{ 
@@ -1339,3 +1347,23 @@ background: url(/_rsrc/common/css_icons/svg/16/form_status_grey.svg) no-repeat c
 .mimi .archive_record, .mimi .archive_record.box{
     background: url(/_rsrc/common/css_icons/svg/16/archive_record.svg) no-repeat center center;
 }
+.mimi .bulb_off, .mimi .bulb_on{ 
+    background: url(/_rsrc/common/css_icons/svg/16/light_bulb.svg) no-repeat center center;
+}
+
+.mimi .paint, .mimi .batch_assignment{
+    background: url(/_rsrc/common/css_icons/svg/16/batch_assignment.svg) no-repeat center center;
+}
+.mimi .star{
+    background: url(/_rsrc/common/css_icons/svg/16/star.svg) no-repeat center center;
+}
+.mimi .trash{
+    background: url(/_rsrc/common/css_icons/svg/16/trash.svg) no-repeat center center;
+}
+.mimi.tundra .dijitComboBox .dijitArrowButton .dijitArrowButtonInner,.mimi.tundra .dijitArrowButtonInner{
+    background: url(/_rsrc/common/css_icons/svg/16/popup.svg) no-repeat center center;
+}
+
+/* .mimi.tundra .dijitFolderClosed{
+    background: url(/_rsrc/common/css_icons/svg/16/folder.svg) no-repeat center center;
+} */
