--- a/projects/gnrcore/packages/adm/resources/frameindex.css
+++ b/projects/gnrcore/packages/adm/resources/frameindex.css
@@ -218,6 +218,8 @@
     padding-top: 1px;
 }
 .framedindex_tablist{
+    min-height:30px;
+    overflow:hidden;
     background-image: -webkit-gradient(linear, 0% 0%, 0% 90%, from(silver), to(gray));
     background-image: -moz-linear-gradient(-90deg, silver, gray);
 }
