--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -1,6 +1,7 @@
 /*vico*/
-body {
-    font-family:"SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
+body.tundra.mimi {
+    font:14px "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
+    color:#333;
 }
 .frameindexroot{
     background:#eeeeee;
@@ -50,11 +51,10 @@ body {
 }
 
 ._common_d11.tundra .dojoxFloatingPaneTitle {
-    background-color: #711B2A;
+    background-image: linear-gradient(to right top, #172b51, #1b3058, #20345e, #243965, #293e6c);
     vertical-align: middle;
     text-align: center;
     color: #f6f6f6;
-    background-image:none;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     padding-top: 2px;
@@ -1013,10 +1013,10 @@ body {
 .framedindex_tablist{
     background-image: none;
     background-image: linear-gradient(to right top, #172b51, #1b3058, #20345e, #243965, #293e6c);
-    padding:2px;
+    min-height: 34px;
 }
 .mimi .framedindex_tablist .button_block.iframetab{ 
-    padding:1px;
+    padding:2px;
 }
 
 .multibutton:last-child{
@@ -1039,7 +1039,11 @@ body {
     font-size: 9pt;
     font-variant:small-caps;*/
 }
-
+.mimi .iframetab{
+    line-height:24px;
+    font-size:10pt;
+    font-variant: none;
+}
 .iframetab:last-child{
     -moz-border-radius-topright: 4px;
     -moz-border-radius-bottomright: 4px;
@@ -1362,7 +1366,38 @@ background: url(/_rsrc/common/css_icons/svg/16/form_status_grey.svg) no-repeat c
 }
 .mimi.tundra .dijitComboBox .dijitArrowButton .dijitArrowButtonInner,.mimi.tundra .dijitArrowButtonInner{
     background: url(/_rsrc/common/css_icons/svg/16/popup.svg) no-repeat center center;
+    transform:rotate(0deg) scale(0.8);
 }
+
+.mimi .application_menu{ 
+    background: url(/_rsrc/common/css_icons/svg/16/menu_icon.svg) no-repeat center center;
+}
+
+.mimi .tree_hierarchical_view, .mimi .iframemenu_plugin_icon{
+    background: url(/_rsrc/common/css_icons/svg/16/tree_hierarchical_view.svg) no-repeat center center;
+}
+.mimi .help{ 
+    background: url(/_rsrc/common/css_icons/svg/16/online_help.svg) no-repeat center center;
+
+}
+
+
+.mimi .ping_semaphore{
+    height: 16px;
+    width: 16px;
+    background: none;
+    transition-duration:1s;
+    -webkit-transition-duration: 1s;
+    -moz-transition-duration: 1s;
+}
+.mimi .ping_start .ping_semaphore{
+    background: url(/_rsrc/common/css_icons/svg/16/socket_transmitting.svg) no-repeat center center;
+}
+
+.mimi .ping_error .ping_semaphore{
+    background: url(/_rsrc/common/css_icons/svg/16/sockets_disconnected.svg) no-repeat center center;
+}
+
 
 /* .mimi.tundra .dijitFolderClosed{
     background: url(/_rsrc/common/css_icons/svg/16/folder.svg) no-repeat center center;
