print editor work in progress

--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -366,9 +366,8 @@ body.tundra.mimi {
 /* @end */
 
 .tundra._common_d11 .dijitDialogTitleBar {
-    background-color:#711B2A;
+    background-image: linear-gradient(to right top, #172b51, #1b3058, #20345e, #243965, #293e6c);
     color: #ffffff;
-    background-image:none;
     vertical-align: middle;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
@@ -379,7 +378,7 @@ body.tundra.mimi {
 }
 
 .tundra._common_d11 .commonTitleBar {
-    background-color:#711B2A;
+    background-image: linear-gradient(to right top, #172b51, #1b3058, #20345e, #243965, #293e6c);
     color: #ffffff;
     text-align: center;
     font-weight:normal;
