--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -1391,7 +1391,7 @@ background: url(/_rsrc/common/css_icons/svg/16/form_status_grey.svg) no-repeat c
     background: url(/_rsrc/common/css_icons/svg/16/online_help.svg) no-repeat center center;
 
 }
-.mimi .spanner, .mimi .toolbox{
+.mimi .iconbox.spanner, .mimi .toolbox{
     background: url(/_rsrc/common/css_icons/svg/16/toolbox.svg) no-repeat center center;
 }
 
