--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -1532,3 +1532,8 @@ background: url(/_rsrc/common/css_icons/svg/16/form_status_grey.svg) no-repeat c
     transition: opacity 200ms, visibility 200ms;
     opacity:1;
 }
+
+
+.floatingPopupFixed {
+    background: url(/_rsrc/common/css_icons/svg/16/popup.svg) no-repeat right;
+}
